--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,16 +6,19 @@ $icon-font-path: "../bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 body{
   background-image: url(../skateboard-images/bg.jpg);
-  width: 1680px;
-  max-width: 100%;
-  align-self: center;
+  width: 100%;
 }
   .wrapper{
     background-color: rgba(0, 0, 0, .5);
-    max-width: 100%;
+    width: 100%;
+    margin: auto;
+  }
+  .container{
+    width: 100%;
+    padding: 0 5%;
+    margin:auto;
   }
   .media-links{
-
     display: flex;
     justify-content: flex-end;
     max-width: 100%;
@@ -47,7 +50,6 @@ body{
   .media-links a i{
     text-align: center;
     padding: 10%;
-
     min-width: 100%;
     min-height: 100%;
     font-size: 300%;
@@ -74,7 +76,7 @@ body{
     display: flex;
     justify-content: space-around;
     align-content: center;
-    max-height: 70px;
+    height: 2.5vw;
   }
   .nav-sheet .col-md-3{
     display: flex;
@@ -83,49 +85,68 @@ body{
     background-color: darken(#b30015, 2%);
     margin: 0 5px;
     padding: 0;
-    width: 260px;
-    min-width: 20%;
-    max-width: 24%;
+    width: 20vw;
     border-bottom-style: outset;
     border-bottom-color: rgba(220,220,220,.9);
+    height: 2.5vw;
+  }
+
+  .deco-lines{
+    border-bottom: solid;
+    border-bottom-color: #FFFFFF;
+    border-bottom-width: .15vw;
+    width: 1.5vw;
+    height: 1.25vw;
   }
   .nav-sheet .col-md-3 a{
     align-self: center;
     display: flex;
     align-content: center;
     color: #FFFFFF;
-    font-size: 100%;
-    height: 40px;
-    max-height: 100%;
-
+    height: 100%;
   }
   .nav-sheet .col-md-3 a label{
     font-weight: 300;
     align-self: center;
-    font-size: 100%;
+    font-size: 1.3vw;
     color: #FFFFFF;
     margin: 0 10px 0 10px;
   }
-  .nav-sheet .col-md-3 a i{
-    display: flex;
-    max-height: 80%;
-    font-size: 400%;
-    font-weight: 100;
-    align-items: center;
-  }
+
   .image-scroller{
     min-height: 375px;
     background-image: url(../skateboard-images/peralta-logo.png),
                       url(../skateboard-images/grid.png),
                       url(../skateboard-images/top-image.png);
     background-repeat: no-repeat;
-    background-position: 20px 30px,center, -120px -150px;
+    background-position: left center,center, center 20%;
     background-blend-mode: normal,overlay,normal;
+    background-size:auto, cover, cover;
+    background-attachment: scroll;
     border-style: solid;
     border-color: #FFFFFF;
     border-width: 15px;
     background-clip: content-box;
-    margin: 20px 0;
+    margin: 0;
+    margin-top: 1.5%;
+  }
+  .button-container{
+    justify-content: center;
+    display: flex;
+    flex-flow: row nowrap;
+  }
+  .scroller-button{
+    height: 100%;
+    width: 20px;
+    height: 20px;
+    border-style: solid;
+    border-radius: 180px;
+    border-color: #FFFFFF;
+    background-color: #FFFFFF;
+    margin: 1% 1%;
+  }
+  .scroller-button:hover{
+    background-color: darken(#b30015, 2%);
   }
   .news-container{
     max-height: 100%;
@@ -223,6 +244,8 @@ body{
     margin-left: 1%;
   }
   .boards{
+    display: flex;
+    justify-content: center;
     margin: auto;
   }
   .boards div.col-md-12{
@@ -250,9 +273,11 @@ body{
   }
   div.col-md-1.icons{
     display: flex;
-    justify-content: space-between;
     min-width: 30%;
     font-size: 15px;
+  }
+  div.col-md-1.icons a{
+    margin: 1%;
   }
   div.col-md-1.icons i{
     text-align: center;
